<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/ds_margin_normal">

    <ImageButton
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_close_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center_vertical"
        android:text="@string/terms_cond"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivClose"
        app:layout_constraintEnd_toStartOf="@id/ivClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivClose" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsBody"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnShareLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_margin_large"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/share_link_dear"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDescriptionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_margin_normal"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/share_link_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeader" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTerm1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_margin_normal"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/share_link_term1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionHeader" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTerm2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_margin_medium"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/share_link_term2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTerm1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTerm3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_margin_medium"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/share_link_term3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTerm2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTermsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_margin_normal"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/share_link_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTerm3" />

            <CheckBox
                android:id="@+id/checkboxCompartir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_margin_normal"
                android:theme="@style/CheckboxFFVV"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTermsDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTermsConditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_regular"
                android:linksClickable="true"
                android:text="@string/terms_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toBottomOf="@id/checkboxCompartir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkboxCompartir"
                app:layout_constraintTop_toTopOf="@id/checkboxCompartir" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShareLink"
        style="@style/Widget.Button.Purple.Variant"
        android:backgroundTint="@drawable/selector_purple_button"
        android:enabled="false"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/share_link_button"
        app:backgroundTint="@drawable/selector_purple_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nsBody" />

</androidx.constraintlayout.widget.ConstraintLayout>
