<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivBlockIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_margin_other_5"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_sad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBlockSETitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_margin_other_20"
        android:gravity="center"
        android:text="@string/blocked_link_se_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBlockIcon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBlockSESubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_large"
        android:layout_marginTop="@dimen/ds_margin_normal"
        android:layout_marginEnd="@dimen/ds_margin_large"
        android:gravity="center"
        android:text="@string/blocked_link_se_subtitle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBlockSETitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCloseDialog"
        style="@style/Widget.Button.Black.Variant"
        android:layout_marginStart="@dimen/ds_margin_normal"
        android:layout_marginTop="@dimen/ds_margin_large"
        android:layout_marginEnd="@dimen/ds_margin_normal"
        android:layout_marginBottom="@dimen/ds_margin_normal"
        android:text="@string/understood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBlockSESubtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
